QE-109 Fix broken styles in the standalone form modal

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/inquiry-form-modal/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/inquiry-form-modal/style.scss
@@ -32,4 +32,56 @@
 			padding-block: var(--spacing-4);
 		}
 	}
+
+	.inquiry-form {
+
+		&__content {
+			height: 100%;
+
+			.form-field--buttons {
+				margin: 0;
+			}
+		}
+
+		&__state {
+			display: none;
+
+			&[data-visible] {
+				display: block;
+			}
+		}
+
+		&__thank-you {
+			display: none;
+			gap: var(--spacing-6);
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+
+			svg {
+				width: 145px;
+				height: 60px;
+			}
+
+			&-text {
+
+				&-heading {
+					margin-bottom: var(--spacing-2);
+				}
+
+				&-body {
+					color: var(--color-gray-60);
+				}
+
+				@media (min-width: grid-size(sm)) {
+					padding-inline: var(--spacing-9);
+				}
+			}
+
+			@media screen and (max-width: calc(grid-size(sm) - 1px)),
+				screen and (max-height: calc(grid-size(md) - 1px) ) {
+				padding-bottom: var(--spacing-5);
+			}
+		}
+	}
 }
